Progress on the page style, layout bug

--- a/HTML-CSS/odin-sign-up/style.css
+++ b/HTML-CSS/odin-sign-up/style.css
@@ -14,7 +14,9 @@ body {
   display: flex;
   height: 100vh;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 0.9em / 1.2;
+  font-size: 1.5rem;
+  line-height: 1.3;
+  min-height: 477px;
 }
 
 aside {
@@ -25,37 +27,36 @@ aside {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 30%;
   background-image: url(./images/side-image.jpg); 
-  background-size: auto 100vh;
+  background-size: auto max(477px, 100vh);
   background-position: right;
 }
 
 .logo {
-  margin-top: 11em;
+  margin-top: 20vh;
   background-color: rgba(0, 0, 0, 0.4);
   align-self: stretch;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.5em;
+  padding: 0.5rem;
 }
 
 .logo img {
   width: auto;
-  height: 6em;
+  height: max(10vh, 60px);
 }
 
 .logo span {
   color: white;
   font-family: "Norse bold", sans-serif;
-  font-size: 4em;
+  font-size: max(9vh, 48px);
 }
 
 footer {
   color: white;
-  margin-bottom: 0.5em;
-  font-size: 0.7em;
+  margin-bottom: 0.5rem;
+  font-size: 0.7rem;
 }
 
 a {
@@ -69,19 +70,75 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: flex-start;
 }
 
 main section {
-  flex: 1;
+  flex-grow: 1;
+/*   padding-left: 3rem; */
 }
-
+/*
 main .header {
   font-weight: 600;
   background-color: rgb(249 250 251);
-  padding-left: 1.5em;
-  padding-right: 7em;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.header p {
+  max-width: 800px;
 }
 
 main .header p:last-child {
-  margin-top: 1em;
+  margin-top: 1rem;
 }
+
+main .form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  box-shadow: 0 3px 5px rgb(0 0 0 / 60%);
+}
+
+h3 {
+  margin-top: 1rem;
+}
+
+form {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  font-size: 0.76rem;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
+  color: rgba(0, 0, 0, 0.8);
+  height: calc(100% - 1.5rem);
+}
+
+form ul {
+  height: 100%;
+  max-width: 880px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+form li {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+}
+
+input {
+  max-width: 350px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  appearance: none;
+  -webkit-appearance: none;
+}
+
+input:focus {
+  border: 1px solid rgb(67, 95, 255);
+} */
